--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "private": false,
   "homepage": "/",
+  "license": "MIT",
   "dependencies": {
     "@jpavon/react-scripts-ts": "^1.2.2",
-    "@types/ramda": "^0.26.15",
+    "@types/ramda": "^0.26.26",
+    "npm-check-updates": "^3.1.23",
     "ramda": "^0.26.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "rxjs": "^6.5.2"
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "rxjs": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -19,12 +21,12 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "@types/node": "^12.6.0",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "cross-env": "^5.2.0",
-    "typescript": "^3.5.2"
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.4",
+    "@types/react-dom": "^16.9.1",
+    "cross-env": "^6.0.0",
+    "typescript": "^3.6.3"
   },
   "browserslist": {
     "development": [
