--- a/server/battleship.cabal
+++ b/server/battleship.cabal
@@ -20,17 +20,17 @@ Executable battleship
   other-modules: Api.Core, Api.Services.GameService, Api.Types, Application, Site
 
   Build-depends:
-    base                      >= 4       && < 5,
+    base                      >= 4,
     bytestring                >= 0.9.1   && < 0.11,
     mtl                       >= 2       && < 3,
     heist                     >= 1.0     && < 2,
     text                      >= 1.2.1   && < 1.3,
     aeson                     >= 1.3     && < 1.5,
-    snap                      >= 1.0     && < 1.2,
-    snap-core                 >= 1.0     && < 1.1,
-    snap-server               >= 1.0     && < 1.2,
-    snap-loader-static        >= 1.0     && < 1.1,
-    lens                      >= 4.16    && < 4.17,
+    snap                      >= 1.0     && < 2,
+    snap-core                 >= 1.0     && < 2,
+    snap-server               >= 1.0     && < 2,
+    snap-loader-static        >= 1.0     && < 2,
+    lens                      >= 4.16    && < 5.0,
     mongoDB                   >= 2.4     && < 3,
     configurator              >= 0.3     && < 0.4,
     bson                      >= 0.3     && < 0.4,
